# GinTonic

./: .gitignore  .travis.yml  Installation.txt  README.md  blockchain_api.txt  docker-compose-go-backend.yml  docker-compose-postgresql.yml  docker-compose-production.yml  docker-compose-test.yml  docker-compose-unix.yml  docker-compose-win10.yml  docker-compose.yml  iot_address  list.go  sum.go  test.sh
backend_go/: curl_requests.txt  index.go  manual.txt
backend_go/controllers/: auth_controller.go
backend_go/handlers/: auth.go  user.go
backend_go/middlewares/: auth.go
backend_go/models/: database.go  main.go  person.go  user.go
blockchain/: Cargo.toml
blockchain/src/: block.rs  handlers.rs  main.rs  processor.rs  transaction_types.rs  wallets.rs
blockchain/src/tests/: initial_tests.rs
frontend/: package.json
frontend/config/: webpack.config.dev.js  webpack.config.prod.js
frontend/public/: index.html
frontend/src/: App.js  index.js  router.js
frontend/src/components/: App.js  Device.js  DevicesContainer.js  Header.js  History.js  Lending.js  Temp1.js  Temp2.js
frontend/src/constants/: actionTypes.js  baseUrl.js  errors.js
frontend/src/containers/: DeviceContainer.js  HistoryContainer.js  Login.js  Register.js
frontend/src/reducers/: index.js
frontend/src/sagas/: index.js
frontend/src/store/: index.js
frontend/src/style/: AddForm.css  Auth.css  ControlPanel.css  Device.css  Header.css  InfoModal.css  Lending.css  Register.css  index.css  toggleButton.css
frontend/src/types/: auth.js  devices.js  general.js
iot_server/: index.go
(+66 files in other folders)
