[package]
name = "blockchain"
version = "0.1.0"
authors = ["Emulebest <igorkorotach@gmail.com>"]

[dependencies]
phf = "0.7.21"
postgres = "0.15.2"
rust-crypto = "^0.2"
chrono = { version = "^0.4", features = ["serde"] }
serde = "1.0.45"
serde_derive = "1.0"
serde_json = "1.0"
actix = "*"
actix-web = "*"
futures = "*"
sha2 = "*"
rand = "*"
reqwest = "*"